--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     image: 'mysql:latest'
     restart: "always"
     volumes:
-      - './data/mysql:/var/lib/mysql'
+      - './.docker/data/mysql:/var/lib/mysql'
     ports:
       - 18766:3306
     environment:
@@ -13,8 +13,6 @@ services:
       MYSQL_DATABASE: custom_wp_db
       MYSQL_USER: custom_wp_root
       MYSQL_PASSWORD: custom_wp_toor
-    # networks:
-    #   - account4all
 
   phpmyadmin:
     depends_on:
@@ -26,15 +24,11 @@ services:
     environment:
       PMA_HOST: db
       MYSQL_ROOT_PASSWORD: password
-    # networks:
-    #   - account4all
 
   wordpress:
     container_name: 'custom-wordpress'
     depends_on:
       - db
-#    image: 'wordpress:php8.1-apache'
-#    image: 'wordpress:6.4.2-php8.2-apache'
     image: 'custom-wordpress-8.1:latest'
     ports:
       - '0.0.0.0:8080:80'
@@ -44,12 +38,7 @@ services:
       WORDPRESS_DB_PASSWORD: custom_wp_toor
       WORDPRESS_DB_NAME: custom_wp_db
     volumes:
-      - "./wordpress:/var/www/html"
-      - "./plugins:/var/www/html/wp-content/plugins"
+      - "./.docker/wordpress:/var/www/html"
+      - "./.docker/plugins:/var/www/html/wp-content/plugins"
     extra_hosts:
       - "host.docker.internal:host-gateway"
-    # networks:
-    #   - account4all
-
-# networks:
-#   account4all:
