--- a/package.json
+++ b/package.json
@@ -4,18 +4,19 @@
   "description": "Example WordPress Plugin Based on Rabbit Framework!",
   "main": "index.js",
   "scripts": {
-    "start": "npm run dev & npm run watch",
-    "watch": "watch \"npm run dev\" ./assets/src/scss",
-    "dev": "npm run compile:scss && npm run postcss:autoprefixer",
-    "compile:scss": "node-sass assets/src/scss/styles.scss assets/css/styles.css --output-style compressed",
-    "postcss:autoprefixer": "postcss assets/css/styles.css --use autoprefixer -b 'last 2 versions' -d assets/css"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "mix watch",
+    "build": "mix --production"
+  },
+  "dependencies": {
+    "laravel-mix": "^6.0.49"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.13",
-    "node-sass": "^4.9.0",
-    "postcss": "^8.4.19",
-    "postcss-cli": "^10.0.0",
-    "watch": "^1.0.2"
+    "purgecss-webpack-plugin": "^5.0.0",
+    "purgecss-with-wordpress": "^6.0.0-alpha.0",
+    "resolve-url-loader": "^5.0.0",
+    "sass": "^1.53.0",
+    "sass-loader": "^12.1.0"
   },
   "repository": {
     "type": "git",
